# fundamentus

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: .gitignore
data/raw/: .gitignore
notebooks/: funds-explorer.ipynb  portifolio-optimization.ipynb
tests/: test_fundamentus.py
