[tool.poetry]
name = "fundamentus"
version = "0.1.0"
description = ""
authors = ["Altieris Peixoto <altieris.marcelino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
sklearn = "^0.0"
pre-commit = "^2.15.0"
pandas = "^1.3.4"
lxml = "^4.6.3"
dynaconf = "^3.1.7"
pandera = "^0.7.2"
yfinance = "^0.1.64"
pandas-datareader = "^0.10.0"
matplotlib = "^3.4.3"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
